--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   "homepage": "https://github.com/derrickpelletier/react-loading-overlay#readme",
   "dependencies": {
     "prop-types": "^15.5.10",
-    "react-transition-group": "^1.2.1",
-    "styled-components": "^2.1.2"
+    "react-transition-group": "^1.2.1"
   },
   "devDependencies": {
     "@kadira/storybook": "2.6.0",
