exporting es6 module from package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "spinner"
   ],
   "main": "lib/LoadingOverlay.js",
+  "module": "src/LoadingOverlay.js",
   "scripts": {
     "build": "npm run build-cjs && npm run build-es6 && rimraf umd && npm run build-umd && npm run build-min",
     "build-cjs": "rimraf lib && babel ./src -d lib",
